add resources and ti rough test

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,25 @@
 *.ang filter=lfs diff=lfs merge=lfs -text
 *.pdf filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
+Resources/Literature/2006_Kitahara_lath_martensite.pdf filter=lfs diff=lfs merge=lfs -text
+Resources/Literature/2012_On_the_nature_of_internal_interfaces_in_Steel_during_creep.pdf filter=lfs diff=lfs merge=lfs -text
+Resources/Literature/Brust_2021_Graph_cut.htm filter=lfs diff=lfs merge=lfs -text
+Resources/Literature/Brust_2021_Graph_cut.pdf filter=lfs diff=lfs merge=lfs -text
+Resources/Literature/Martensiteencyclopedia.article.2001.pdf filter=lfs diff=lfs merge=lfs -text
+Resources/Literature/Strain[[:space:]]Orientation[[:space:]]Distribution[[:space:]]Functions.pptm filter=lfs diff=lfs merge=lfs -text
+Resources/Literature/Waggoner2014_Article_Graph-cutBasedInteractiveSegme.pdf filter=lfs diff=lfs merge=lfs -text
+Resources/Literature/2004_Kitahara_plate_martensite.pdf filter=lfs diff=lfs merge=lfs -text
+Resources/Literature/Bunge_TextureAnalysis.pdf filter=lfs diff=lfs merge=lfs -text
+Resources/Literature/Kurdjumow-Sachs1930_Article_ÜberDenMechanismusDerStahlhärt.pdf filter=lfs diff=lfs merge=lfs -text
+Resources/Literature/2019_application-of-the-maximum-flowminimum-cut-algorithm-to-segmentation-and-clustering-of-materials-datasets.pdf filter=lfs diff=lfs merge=lfs -text
+Resources/Literature/Brust2020_Article_CharacterizationOfMartensiteOr.pdf filter=lfs diff=lfs merge=lfs -text
+Resources/Literature/2006_Ch5_Handbook_of_mathematical_Methods.pdf filter=lfs diff=lfs merge=lfs -text
+Resources/Literature/2014_Yardley_Payton_ksi_parameters.pdf filter=lfs diff=lfs merge=lfs -text
+Resources/Literature/3D_Materials_Image_Segmentation_by_2D_Propagation_A_Graph-Cut_Approach_Considering_Homomorphism.pdf filter=lfs diff=lfs merge=lfs -text
+Resources/Literature/Brust2019_Article_AnalysisOfMisorientationRelati.pdf filter=lfs diff=lfs merge=lfs -text
+Resources/Literature/Extracting_dense_features_for_visual_correspondence_with_graph_cuts.pdf filter=lfs diff=lfs merge=lfs -text
+Resources/Literature/Orientations[[:space:]]perfectly[[:space:]]colored.pdf filter=lfs diff=lfs merge=lfs -text
+Resources/Literature/2004_Boykov_minCut_maxflow.pdf filter=lfs diff=lfs merge=lfs -text
+Resources/EBSD filter=lfs diff=lfs merge=lfs -text
+Resources/Literature filter=lfs diff=lfs merge=lfs -text
+Resources/misc filter=lfs diff=lfs merge=lfs -text
